--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-    
 
 jobs:
   build:
@@ -15,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: login en DockerHub
-        uses: docker login -u ${{ secrets.DOCKER_USER }} -p "${{ secrets.DOCKER_PASSWORD }}"
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p "${{ secrets.DOCKER_PASSWORD }}"
 
       - name: Crear la imagen de Docker
         run: docker build -t josaplus/cinenis .
@@ -31,10 +30,9 @@ jobs:
         run: |
           docker container run --rm \
             --network host \
-            -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
-            -e DATABASE_USER="${{ secrets.DATABASE_USER }}" \
-            -e DATABASE_PASSWORD="${{ secrets.DATABASE_PASSWORD }}" \
-            -e DATABASE_NAME="${{ secrets.DATABASE_NAME }}" \
-            -e DATABASE_HOST="${{ secrets.DATABASE_HOST }}" \
-            -e DATABASE_PORT="${{ secrets.DATABASE_PORT }}" \
+            -e DATABASE_HOST=${{ secrets.DATABASE_HOST}} \
+            -e DATABASE_PORT=${{ secrets.DATABASE_PORT}} \
+            -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME}} \
+            -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD}} \
+            -e DATABASE_NAME=${{ secrets.DATABASE_NAME}} \
             josaplus/cinenis:latest migrate --yes
